CRUD complete by ExpressJS with sign up process

--- a/views/api_docs.ejs
+++ b/views/api_docs.ejs
@@ -3,7 +3,7 @@
       <div class="col-md-12" style="margin-top:5%">
         <div class="panel panel-default">
           <div class="panel-body">
-            <h1 class="text-center">Welcome to ExpressJS Booking App</h1>
+            <p class="text-center">API Documentation is under development</p>
           </div>
         </div>
       </div>
