Authentication and authorization updated

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,18 +1,28 @@
 <%- include("./partials/header.ejs"); %>
     <div class="row">
       <div class="col-md-4 col-md-offset-4" style="margin-top:5%">
-        <form action="">
+        <form action="/login" method="POST">
           <div class="panel panel-default">
             <div class="panel-header"><h2 class="text-center">Sign In</h2></div>
             <div class="panel-body">
               <div class="form-group">
                 <label for="">Username</label>
-                <input type="text" class="form-control" name="username" />
+                <input type="text" class="form-control" name="username" placeholder="Email or Contact number" value="<%= data.username %>"/>
+                <% if(errors.username) { %> 
+                <p class="error show"><%= errors.username.msg  %> </p>
+                <% } %> 
               </div>
                 <div class="form-group">
                   <label for="">Password</label>
-                  <input type="password" class="form-control" name="password" />
+                  <input type="password" class="form-control" name="password" placeholder="Enter password" />
                 </div>
+                <% if(errors.password) { %> 
+                <p class="error show"><%= errors.password.msg  %> </p>
+                <% } %>
+                
+                <% if(errors.common) { %> 
+                  <p class="error show"><%= errors.common.msg  %> </p>
+                  <% } %> 
             </div>
             <div class="panel-footer">
               <button class="btn btn-info">Login</button>
