--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,11 +15,39 @@
     <div class="row">
       <div class="navbar navbar-default">
         <ul class="nav navbar-nav">
-          <li><a href="/">Home</a></li>
-          <li><a href="/login">Sign In</a></li>
-          <li><a href="/signup">Sign Up</a></li>
+          <% if(loggedInUser && loggedInUser.username) { %>
+            <li><a href="/dashboard">Dashboard</a></li>
+          <% }else{ %>
+            <li><a href="/">Home</a></li>
+            <li><a href="/api-docs">API Documentation</a></li>
+            <li><a href="/signup">Sign Up</a></li>
+          <% } %>
+          <% if(loggedInUser && loggedInUser.username) { %>
           <li><a href="/user">Users</a></li>
-          <li><a href="/api-docs">API Documentation</a></li>
+          <li><a href="#" onclick="logout()">Sign Out</a></li>
+          <% } else { %>
+          <li><a href="/login">Sign In</a></li>
+          <% } %> 
         </ul>
       </div>
     </div>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script>
+      // toast
+      const logoutToast = Toastify({
+        text: "You are being logged out...",
+        duration: 1000,
+      });
+
+      // logout method
+      function logout()
+      {
+        fetch("/", {
+          method: "DELETE",
+        });
+        logoutToast.showToast();
+        setTimeout(() => {
+          window.location.replace("/");
+        }, 1000);
+      }
+    </script>
