--- a/views/users.ejs
+++ b/views/users.ejs
@@ -11,6 +11,7 @@
                 <th>Contact</th>
                 <th>Join Date</th>
                 <th>Photo</th>
+                <th>Action</th>
               </tr>
               <!-- <script> console.log(users); </script> -->
               <% users.forEach(function(user) { %> 
